# locally

./: .cursorignore  Makefile  README.md  compose.yaml  compose.yml  package-lock.json
db/: schema.sql  seed.sql  spatial_index.sql
db/pb_migrations/: 1738128675_created_stores.js  1738206649_updated_stores.js  1738206668_updated_stores.js  1738207261_updated_stores.js  1738211458_updated_stores.js  1738211548_updated_stores.js  1738212992_created_store_items.js
frontend/: Dockerfile  env.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/search/: route.ts
frontend/src/app/contexts/: auth.tsx
frontend/src/components/: InventoryMap.tsx  LocationSearch.tsx  Map.tsx  SearchForm.tsx  SearchLocation.tsx
frontend/src/services/: add_item_to_db.ts  inventory_api.ts
frontend/src/types/: inventory.ts
python-backend/: Dockerfile  README.md  pyproject.toml
python-backend/localmart_backend/: __init__.py  main.py
search/: Dockerfile  mix.exs
search/assets/: tailwind.config.js
search/assets/js/: app.js  infinite_scroll.js
search/config/: config.exs  dev.exs  runtime.exs  test.exs
search/lib/: search_web.ex
search/lib/search/: application.ex  meilisearch.ex
search/lib/search_web/: endpoint.ex  gettext.ex  router.ex  search_live.ex  telemetry.ex
search/lib/search_web/components/: core_components.ex  layouts.ex
search/lib/search_web/components/layouts/: root.html.heex
search/lib/search_web/controllers/: error_html.ex  error_json.ex  page_html.ex
search/test/support/: conn_case.ex
