[tool.poetry]
name = "localmart-backend"
version = "0.1.0"
description = "LocalMart Backend API"
authors = ["Peter Valdez"]
packages = [{include = "localmart_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
